# short_vector

./: CMakeLists.txt
short_vector/: CMakeLists.txt  core.hpp  import.hpp  short_vector.hpp  utility.hpp
short_vector/avx/: m256.hpp  m256d.hpp  utility.hpp
short_vector/avx512/: m512.hpp
short_vector_testing/: CMakeLists.txt  m256_test.cpp  short_vector_auto_test.cpp
